[package]
name = "fazzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.11", features=['cargo']}
http = "1.0.0"
hyper = { version = "1.0.1", features = ["full"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }